--- a/app/templates/video_title_tags/index.html
+++ b/app/templates/video_title_tags/index.html
@@ -34,15 +34,15 @@
                         </div>
 
                         <div id="connectionButtons" style="display: none;">
-                            <a href="/accounts" id="connectBtn" class="secondary-button" style="display: none;">
+                            <button id="connectBtn" class="secondary-button" style="display: none;">
                                 <i class="ph ph-link"></i>
                                 <span>Connect YouTube</span>
-                            </a>
+                            </button>
 
-                            <a href="/accounts" id="disconnectBtn" class="btn-disconnect" style="display: none;">
-                                <i class="ph ph-gear"></i>
-                                Manage Connection
-                            </a>
+                            <button id="disconnectBtn" class="btn-disconnect" style="display: none;">
+                                <i class="ph ph-plug"></i>
+                                Disconnect
+                            </button>
                         </div>
 
                         <!-- Loading skeleton for buttons -->
