--- a/app/templates/instagram_upload_studio/index.html
+++ b/app/templates/instagram_upload_studio/index.html
@@ -97,7 +97,7 @@
                         <div class="form-group" id="videoUploadSectionStatic">
                             <label class="form-label">
                                 <i class="ph ph-upload"></i>
-                                Upload Media
+                                Video
                             </label>
                             <div class="video-upload-area" id="videoUploadAreaStatic" onclick="triggerVideoUploadStatic()">
                                 <input type="file" id="videoFileInputStatic" accept="image/*,video/*" style="display: none;" onchange="handleVideoSelectStatic(event)">
