--- a/app/templates/tiktok_upload_studio/index.html
+++ b/app/templates/tiktok_upload_studio/index.html
@@ -126,6 +126,10 @@
                             <label class="form-label">
                                 <i class="ph ph-key"></i>
                                 Target Keyword
+                                <div class="info-tooltip">
+                                    <i class="ph ph-info"></i>
+                                    <span class="tooltip-text">If provided, titles will start with this exact keyword</span>
+                                </div>
                             </label>
                             <input type="text"
                                    class="form-input"
@@ -138,6 +142,10 @@
                             <label class="form-label">
                                 <i class="ph ph-article"></i>
                                 Video Description or Script
+                                <div class="info-tooltip">
+                                    <i class="ph ph-info"></i>
+                                    <span class="tooltip-text">The more concrete you are about the video, the better the results. Include key topics, main points, and specific details.</span>
+                                </div>
                             </label>
                             <textarea class="form-textarea"
                                       id="videoConceptInput"
